--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="content">
         <img src="img/v629_6051.png">
         <div class="patient-info">
-            <img src="" alt="" id="patientPhoto">
+            <img src="img/User.png" alt="" id="patientPhoto">
             <div class="patient-details">
               <h2 id="patientName"></h2>
                 <p id="patientAge"></p>
